rust/codec-org/src/snapshots/fragments@image.org.snap
---
source: rust/codec-org/src/lib.rs
assertion_line: 79
expression: node
input_file: fixtures/fragments/org/image.org
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        "An image ",
        {
          "type": "ImageObject",
          "contentUrl": "image.png"
        },
        "."
      ]
    }
  ]
}
