rust/codec-org/src/snapshots/fragments@paragraph.org.snap
---
source: rust/codec-org/src/lib.rs
assertion_line: 79
expression: node
input_file: fixtures/fragments/org/paragraph.org
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        "First paragraph."
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        "Second paragraph."
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        "Third paragraph, split over multiple lines."
      ]
    }
  ]
}
